# codebase

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  helloworld.cpp  required_apt_pkgs.txt  vcpkg.json
scripts/: fix-hash-sum-mismatch.sh
